--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [10.x]
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
@@ -16,15 +16,16 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: lint
       run: |
+        npm install -g npm@latest
         npm install --frozen-lockfile
-        npm lint
+        npm run lint
 
   test:
     name: Testing
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [10.x]
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
@@ -33,15 +34,16 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: test
       run: |
+        npm install -g npm@latest
         npm install --frozen-lockfile
-        npm test
+        npm run test
 
   build_code:
     name: Build Code
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [10.x]
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
@@ -50,6 +52,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: build
       run: |
+        npm install -g npm@latest
         npm install --frozen-lockfile
-        npm install --frozen-lockfile
-        npm build:check
+        npm run build:check
