--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
   "dependencies": {
     "@polkadot/api": "^0.100.1",
     "@polkadot/keyring": "^1.8.1",
-    "wakkanay": "github:cryptoeconomicslab/wakkanay"
+    "@cryptoeconomicslab/contract": "0.0.35",
+    "@cryptoeconomicslab/db": "0.0.35",
+    "@cryptoeconomicslab/ovm": "0.0.35",
+    "jsbi": "^3.1.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.20",
     "@types/node": "^12.12.16",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
+    "@cryptoeconomicslab/primitives": "0.0.35",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
@@ -42,6 +46,9 @@
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
+  },
+  "peerDependencies": {
+    "@cryptoeconomicslab/primitives": "^0.0.5"
   },
   "jest": {
     "transform": {
